--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="Resources"/>
 	<classpathentry kind="lib" path="F:/install Java external JARs/selenium-java-3.141.59/client-combined-3.141.59.jar"/>
 	<classpathentry kind="lib" path="F:/install Java external JARs/selenium-java-3.141.59/client-combined-3.141.59-sources.jar"/>
 	<classpathentry kind="lib" path="F:/install Java external JARs/selenium-java-3.141.59/libs/byte-buddy-1.8.15.jar"/>
@@ -16,5 +17,7 @@
 	<classpathentry kind="lib" path="F:/install Java external JARs/commons-io-2.6-bin/commons-io-2.6/commons-io-2.6-tests.jar"/>
 	<classpathentry kind="lib" path="F:/install Java external JARs/commons-io-2.6-bin/commons-io-2.6/commons-io-2.6-test-sources.jar"/>
 	<classpathentry kind="lib" path="F:/install Java external JARs/selenium-server-standalone-3.141.59.jar"/>
+	<classpathentry kind="lib" path="F:/install Java external JARs/2-Log4j-added-only/log4j-api-2.11.2.jar"/>
+	<classpathentry kind="lib" path="F:/install Java external JARs/2-Log4j-added-only/log4j-core-2.11.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
