--- a/.classpath
+++ b/.classpath
@@ -19,5 +19,10 @@
 	<classpathentry kind="lib" path="F:/install Java external JARs/selenium-server-standalone-3.141.59.jar"/>
 	<classpathentry kind="lib" path="F:/install Java external JARs/2-Log4j-added-only/log4j-api-2.11.2.jar"/>
 	<classpathentry kind="lib" path="F:/install Java external JARs/2-Log4j-added-only/log4j-core-2.11.2.jar"/>
+	<classpathentry kind="lib" path="F:/install Java external JARs/poi-bin-3.6-20091214/poi-3.6/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="F:/install Java external JARs/poi-bin-3.6-20091214/poi-3.6/poi-3.6-20091214.jar"/>
+	<classpathentry kind="lib" path="F:/install Java external JARs/poi-bin-3.6-20091214/poi-3.6/poi-ooxml-3.6-20091214.jar"/>
+	<classpathentry kind="lib" path="F:/install Java external JARs/poi-bin-3.6-20091214/poi-3.6/poi-ooxml-schemas-3.6-20091214.jar"/>
+	<classpathentry kind="lib" path="F:/install Java external JARs/poi-bin-3.6-20091214/poi-3.6/xmlbeans-2.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
